--- a/LOOPUIUX/app/src/main/res/values/themes.xml
+++ b/LOOPUIUX/app/src/main/res/values/themes.xml
@@ -36,4 +36,26 @@
 
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
+  <style name="error_text_appearence" parent="TextAppearance.AppCompat">
+    <item name="android:fontFamily">@font/koho_regular</item>
+    <item name="android:textColor">@color/red_500</item>
+    <item name="fontFamily">@font/koho_regular</item>
+    <item name="android:textSize">13sp</item>
+    <item name="autoSizeMaxTextSize">13sp</item>
+  </style>
+
+  <style name="text_input_style" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+    <item name="boxBackgroundColor">@color/dirty_white</item>
+    <item name="boxStrokeColor">@color/red_500</item>
+    <item name="counterEnabled">true</item>
+    <item name="counterOverflowTextColor">@color/red_500</item>
+    <item name="counterTextColor">@color/dirty_white</item>
+    <item name="hintTextColor">@color/black</item>
+    <item name="android:textColorHint">@color/black</item>
+    <item name="errorTextColor">@color/red_500</item>
+    <item name="errorIconTint">@color/red_500</item>
+    <item name="boxStrokeErrorColor">@color/red_500</item>
+    <item name="errorTextAppearance">@style/error_text_appearence</item>
+  </style>
+
 </resources>
