--- a/LOOPUIUX/app/src/main/res/layout/list_item.xml
+++ b/LOOPUIUX/app/src/main/res/layout/list_item.xml
@@ -89,6 +89,8 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text="title"
+        android:focusable="false"
+        android:clickable="false"
         android:textColor="@color/dirty_white"
         style="@style/title_style"
         app:layout_constraintBottom_toTopOf="@+id/imageButtonChevronBackground"
@@ -103,6 +105,8 @@
         android:layout_marginTop="0dp"
         android:elevation="4dp"
         android:ellipsize="end"
+        android:focusable="false"
+        android:clickable="false"
         style="@style/content_style"
         android:paddingBottom="20dp"
         android:text="@string/lorem_content"
